RESOLVED FIXED24784
Transform lengths broken with full-page zoom
https://bugs.webkit.org/show_bug.cgi?id=24784
Summary Transform lengths broken with full-page zoom
Simon Fraser (smfr)
Reported 2009-03-24 13:52:43 PDT
When using full-page zoom, the length values in css transform operations are not correctly adjusted.
Attachments
Patch, testcase, changelog (8.33 KB, patch)
2009-03-24 16:33 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-24 16:33:45 PDT
Created attachment 28915 [details] Patch, testcase, changelog
Dave Hyatt
Comment 2 2009-03-25 11:59:39 PDT
Comment on attachment 28915 [details] Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 3 2009-03-25 12:52:39 PDT
EWS
Comment 4 2023-01-19 16:39:29 PST
Committed 259119@main (c4ef868fe788): <https://commits.webkit.org/259119@main> Reviewed commits have been landed. Closing PR #8564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.