2009-03-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24784

        Length values in transform operations need to take zoom into account.

        Test: fast/transforms/transforms-with-zoom.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::createTransformOperations):

Canonical link: https://commits.webkit.org/34037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41980 268f45cc-cd09-0410-ab3c-d52691b4dbfc